# easy-code-reader

./: .gitignore  .npmignore  EXAMPLES.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  MIGRATION_TO_UVX.md  PUBLISH_QUICK_GUIDE.md  PUBLISH_TO_PYPI.md  QUICK_START.md  README.md  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: easy-code-reader-rule.prompt.md
.github/workflows/: publish-to-pypi.yml
example_code/maven_decoder_mcp/: config.py  decompiler.py  maven_analyzer.py  maven_decoder_server.py
examples/: basic_usage.py  create_sample_jar.py  demo.py  demo_decompile.py  integration_test.py
scripts/: pre-publish-check.sh  publish.sh
src/easy_code_reader/: __main__.py  config.py  decompiler.py  server.py
src/easy_jar_reader/: __main__.py  config.py  decompiler.py  server.py
tests/: conftest.py  test_decompiler.py  test_decompiler_package_data.py  test_integration.py  test_project_tools.py  test_search_artifact.py  test_search_group_id.py  test_snapshot_handling.py
